Updated for UCL students

--- a/Exercises/01_python_fundamentals_exercise.ipynb
+++ b/Exercises/01_python_fundamentals_exercise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Python fundamentals\n",
     "\n",
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557). \n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for the UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -101,8 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate it here\n",
-""
+    "# Calculate it here\n"
    ]
   },
   {
@@ -308,8 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try fixing the code!\n",
-""
+    "#try fixing the code!\n"
    ]
   },
   {
@@ -385,8 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Come up with appropriate values for trip_distance, fuel_economy, fuel_price\n",
-""
+    "# Come up with appropriate values for trip_distance, fuel_economy, fuel_price\n"
    ]
   },
   {
@@ -395,8 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate fuel_cost and store it as a variable\n",
-""
+    "# Calculate fuel_cost and store it as a variable\n"
    ]
   },
   {
@@ -503,8 +499,7 @@
    "source": [
     "bus_fare = 2.4\n",
     "# check if the bus is cheaper than the car (fuel_cost)\n",
-    "# and tell the user if so!\n",
-""
+    "# and tell the user if so!\n"
    ]
   },
   {
@@ -637,8 +632,7 @@
    "outputs": [],
    "source": [
     "num = 5.23447\n",
-    "# try rounding to different numbers of digits\n",
-""
+    "# try rounding to different numbers of digits\n"
    ]
   },
   {
@@ -654,8 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Try rounding the numbers 1.5, 2.5, 3.5, 4.5\n",
-""
+    "#Try rounding the numbers 1.5, 2.5, 3.5, 4.5\n"
    ]
   },
   {
@@ -682,14 +675,13 @@
    "source": [
     "hi = 'Hello!'\n",
     "print(hi.upper())\n",
-    "#try using lower with hi\n",
-""
+    "#try using lower with hi\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +695,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:30:19) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b76fd85120666f0bd55f9d97940fbf0e5470387377d9c5f936b61d77d81d2f47"
+   }
   }
  },
  "nbformat": 4,
