--- a/Solutions/01_python_fundamentals_solution.ipynb
+++ b/Solutions/01_python_fundamentals_solution.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Python fundamentals\n",
     "\n",
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557). \n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for the UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -102,8 +102,7 @@
    "outputs": [],
    "source": [
     "# Calculate it here\n",
-    "366*24*60*60\n",
-""
+    "366*24*60*60\n"
    ]
   },
   {
@@ -310,8 +309,7 @@
    "outputs": [],
    "source": [
     "#try fixing the code!\n",
-    "'My favourite number is ' + str(6)\n",
-""
+    "'My favourite number is ' + str(6)\n"
    ]
   },
   {
@@ -390,8 +388,7 @@
     "# Come up with appropriate values for trip_distance, fuel economy, fuel_price\n",
     "trip_distance = 25 #km\n",
     "fuel_economy = 36 #miles per UK gallon\n",
-    "fuel_price = 1.67 #CHF per litre\n",
-""
+    "fuel_price = 1.67 #CHF per litre\n"
    ]
   },
   {
@@ -401,8 +398,7 @@
    "outputs": [],
    "source": [
     "# Calculate fuel_cost and store it as a variable\n",
-    "fuel_cost = 4.55*fuel_price*trip_distance/(1.6*fuel_economy)\n",
-""
+    "fuel_cost = 4.55*fuel_price*trip_distance/(1.6*fuel_economy)\n"
    ]
   },
   {
@@ -511,8 +507,7 @@
     "# check if the bus is cheaper than the car (fuel_cost)\n",
     "# and tell the user if so!\n",
     "if fuel_cost > bus_fare:\n",
-    "    print('It would be cheaper to take the bus!')\n",
-""
+    "    print('It would be cheaper to take the bus!')\n"
    ]
   },
   {
@@ -646,8 +641,7 @@
    "source": [
     "num = 5.23447\n",
     "# try rounding to different numbers of digits\n",
-    "round(num,4)\n",
-""
+    "round(num,4)\n"
    ]
   },
   {
@@ -667,8 +661,7 @@
     "print(round(1.5))\n",
     "print(round(2.5))\n",
     "print(round(3.5))\n",
-    "print(round(4.5))\n",
-""
+    "print(round(4.5))\n"
    ]
   },
   {
@@ -696,14 +689,13 @@
     "hi = 'Hello!'\n",
     "print(hi.upper())\n",
     "#try using lower with hi\n",
-    "print(hi.lower())\n",
-""
+    "print(hi.lower())\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -717,7 +709,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:30:19) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b76fd85120666f0bd55f9d97940fbf0e5470387377d9c5f936b61d77d81d2f47"
+   }
   }
  },
  "nbformat": 4,
