--- a/Solutions/04_pandas_solution.ipynb
+++ b/Solutions/04_pandas_solution.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557).\n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -80,8 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.shape\n",
-""
+    "df.shape\n"
    ]
   },
   {
@@ -90,8 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns\n",
-""
+    "df.columns\n"
    ]
   },
   {
@@ -145,8 +143,7 @@
    "source": [
     "print(f'''The mean distance is {dist.mean()}, \n",
     "      the minimum distance is {dist.min()}, \n",
-    "      and the max distance is {dist.max()}''')\n",
-""
+    "      and the max distance is {dist.max()}''')\n"
    ]
   },
   {
@@ -164,8 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_trips = df[dist>5000]\n",
-""
+    "long_trips = df[dist>5000]\n"
    ]
   },
   {
@@ -181,8 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_trips.shape\n",
-""
+    "long_trips.shape\n"
    ]
   },
   {
@@ -214,8 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_trips.travel_mode.unique()\n",
-""
+    "long_trips.travel_mode.unique()\n"
    ]
   },
   {
@@ -248,8 +242,7 @@
    "outputs": [],
    "source": [
     "print(long_trips.travel_mode.value_counts()/long_trips.shape[0])\n",
-    "print(df[df.distance<1000].travel_mode.value_counts()/df[df.distance<1000].shape[0])\n",
-""
+    "print(df[df.distance<1000].travel_mode.value_counts()/df[df.distance<1000].shape[0])\n"
    ]
   },
   {
@@ -290,8 +283,7 @@
    "source": [
     "travel_modes = smalldf.travel_mode.unique()\n",
     "# use dictionary comprehension with travel_modes and smalldf\n",
-    "{m: smalldf[smalldf.travel_mode==m].distance.mean() for m in travel_modes}\n",
-""
+    "{m: smalldf[smalldf.travel_mode==m].distance.mean() for m in travel_modes}\n"
    ]
   },
   {
@@ -311,8 +303,7 @@
    "outputs": [],
    "source": [
     "dur_df = df[['travel_mode', 'distance'] + [c for c in df.columns if 'dur' in c]]\n",
-    "dur_df.head()\n",
-""
+    "dur_df.head()\n"
    ]
   },
   {
@@ -355,8 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-""
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -372,8 +362,7 @@
     "    dur_df.plot.scatter(x='distance', y=f'dur_{mode}', \n",
     "                        s=1, ax=ax, marker='.', label = mode, color = colors[i])\n",
     "ax.set_ylabel('duration')\n",
-    "fig.savefig('tim_scatter.pdf')\n",
-""
+    "fig.savefig('tim_scatter.pdf')\n"
    ]
   },
   {
@@ -391,8 +380,7 @@
     "    axs[i].set_ylim(0,.001)\n",
     "    axs[i].set_xlim(-500,5000)\n",
     "axs[3].set_xlabel('Duration')\n",
-    "fig.savefig('tim_density.png')\n",
-""
+    "fig.savefig('tim_density.png')\n"
    ]
   }
  ],
