--- a/Exercises/02_python_further_techniques_exercise.ipynb
+++ b/Exercises/02_python_further_techniques_exercise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Better Python programming\n",
     "\n",
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557). \n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for the UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -125,8 +125,7 @@
    "outputs": [],
    "source": [
     "cyc = 'Cycle'\n",
-    "# Take a slice of the first three characters of cyc\n",
-""
+    "# Take a slice of the first three characters of cyc\n"
    ]
   },
   {
@@ -142,8 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take a slice of the first three characters of element 1 of travel_modes\n",
-""
+    "# Take a slice of the first three characters of element 1 of travel_modes\n"
    ]
   },
   {
@@ -161,8 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the last travel mode to 'Metro'\n",
-""
+    "# Change the last travel mode to 'Metro'\n"
    ]
   },
   {
@@ -197,8 +194,7 @@
    "outputs": [],
    "source": [
     "other_modes = ['Plane', ['Speed-Boat', 'Ferry'], None, 10]\n",
-    "# create a new_list combining travel_modes and other_modes\n",
-""
+    "# create a new_list combining travel_modes and other_modes\n"
    ]
   },
   {
@@ -214,8 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try using a few string methods on new list\n",
-""
+    "#try using a few string methods on new list\n"
    ]
   },
   {
@@ -320,8 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try extracting the cost for travelling by car\n",
-""
+    "#try extracting the cost for travelling by car\n"
    ]
   },
   {
@@ -408,8 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the first three letters of each mode in travel_modes\n",
-""
+    "# print the first three letters of each mode in travel_modes\n"
    ]
   },
   {
@@ -427,8 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only print modes in travel_modes longer than 4 characters\n",
-""
+    "# Only print modes in travel_modes longer than 4 characters\n"
    ]
   },
   {
@@ -448,8 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use range to print the even numbers between 5 and 15\n",
-""
+    "# use range to print the even numbers between 5 and 15\n"
    ]
   },
   {
@@ -717,8 +708,8 @@
    "outputs": [],
    "source": [
     "def epfl_email(first_name, last_name):\n",
-    "    '''Email address generator, prints <first_name>.<last_name>@epfl.ch'''\n",
-    "    print(f'{first_name.lower()}.{last_name.lower()}@epfl.ch')\n",
+    "    '''Email address generator, prints <first_name>.<last_name>@ucl.ac.uk'''\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ac.uk')\n",
     "\n",
     "epfl_email('Tim', 'Hillel')"
    ]
@@ -753,8 +744,8 @@
    "outputs": [],
    "source": [
     "def epfl_email(first_name='first', last_name='last'):\n",
-    "    '''Email address generarator, prints <first_name>.<last_name>@epfl.ch'''\n",
-    "    print(f'{first_name.lower()}.{last_name.lower()}@epfl.ch')\n",
+    "    '''Email address generarator, prints <first_name>.<last_name>@ucl.ac.uk'''\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ac.uk')\n",
     "\n",
     "epfl_email()"
    ]
@@ -772,8 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# modify the function to add sld and tld as optional arguments\n",
-""
+    "# modify the function to add sld and tld as optional arguments\n"
    ]
   },
   {
@@ -809,7 +799,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -823,7 +813,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:30:19) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b76fd85120666f0bd55f9d97940fbf0e5470387377d9c5f936b61d77d81d2f47"
+   }
   }
  },
  "nbformat": 4,
