--- a/Exercises/03_numpy_matplotlib_exercise.ipynb
+++ b/Exercises/03_numpy_matplotlib_exercise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Numpy & matplotlib\n",
     "\n",
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557). \n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for the UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -94,8 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create vector a1\n",
-""
+    "# create vector a1\n"
    ]
   },
   {
@@ -111,8 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reshape a1 to 4x5 and store the result in a2\n",
-""
+    "# reshape a1 to 4x5 and store the result in a2\n"
    ]
   },
   {
@@ -127,9 +125,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -146,9 +142,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -167,9 +161,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -201,9 +193,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -217,9 +207,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -255,8 +243,7 @@
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
-    "# create a4\n",
-""
+    "# create a4\n"
    ]
   },
   {
@@ -273,9 +260,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -293,9 +278,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -313,9 +296,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -349,9 +330,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -365,9 +344,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -394,14 +371,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +390,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:30:19) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b76fd85120666f0bd55f9d97940fbf0e5470387377d9c5f936b61d77d81d2f47"
+   }
   }
  },
  "nbformat": 4,
