--- a/Exercises/04_pandas_exercise.ipynb
+++ b/Exercises/04_pandas_exercise.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557).\n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -79,18 +79,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -140,9 +136,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -158,9 +152,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -174,9 +166,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -206,9 +196,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -238,9 +226,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -279,8 +265,7 @@
    "outputs": [],
    "source": [
     "travel_modes = smalldf.travel_mode.unique()\n",
-    "# use dictionary comprehension with travel_modes and smalldf\n",
-""
+    "# use dictionary comprehension with travel_modes and smalldf\n"
    ]
   },
   {
@@ -298,9 +283,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -341,32 +324,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-""
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -380,7 +357,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:30:19) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b76fd85120666f0bd55f9d97940fbf0e5470387377d9c5f936b61d77d81d2f47"
+   }
   }
  },
  "nbformat": 4,
