--- a/Solutions/02_python_further_techniques_solution.ipynb
+++ b/Solutions/02_python_further_techniques_solution.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Better Python programming\n",
     "\n",
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557). \n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for the UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -126,8 +126,7 @@
    "source": [
     "cyc = 'Cycle'\n",
     "# Take a slice of the first three characters of cyc\n",
-    "'Cycle'[:3]\n",
-""
+    "'Cycle'[:3]\n"
    ]
   },
   {
@@ -144,8 +143,7 @@
    "outputs": [],
    "source": [
     "# Take a slice of the first three characters of element 1 of travel_modes\n",
-    "travel_modes[1][:3]\n",
-""
+    "travel_modes[1][:3]\n"
    ]
   },
   {
@@ -165,8 +163,7 @@
    "source": [
     "# Change the last travel mode to 'Metro'\n",
     "travel_modes[-1] = 'Metro'\n",
-    "travel_modes\n",
-""
+    "travel_modes\n"
    ]
   },
   {
@@ -203,8 +200,7 @@
     "other_modes = ['Plane', ['Speed-Boat', 'Ferry'], None, 10]\n",
     "# create a new_list combining travel_modes and other_modes\n",
     "new_list=travel_modes + other_modes\n",
-    "new_list\n",
-""
+    "new_list\n"
    ]
   },
   {
@@ -222,8 +218,7 @@
    "source": [
     "#try using a few string methods on new list\n",
     "new_list.remove(10)\n",
-    "new_list\n",
-""
+    "new_list\n"
    ]
   },
   {
@@ -329,8 +324,7 @@
    "outputs": [],
    "source": [
     "#try extracting the cost for travelling by car\n",
-    "mode_costs['Car']\n",
-""
+    "mode_costs['Car']\n"
    ]
   },
   {
@@ -419,8 +413,7 @@
    "source": [
     "# print the first three letters of each mode in travel_modes\n",
     "for mode in travel_modes:\n",
-    "    print(mode[:3])\n",
-""
+    "    print(mode[:3])\n"
    ]
   },
   {
@@ -441,8 +434,7 @@
     "# Only print modes in travel_modes longer than 4 characters\n",
     "for mode in travel_modes:\n",
     "    if len(mode)>4:\n",
-    "        print(mode)\n",
-""
+    "        print(mode)\n"
    ]
   },
   {
@@ -464,8 +456,7 @@
    "source": [
     "# use range to print the even numbers between 5 and 15\n",
     "for i in range(6,15,2):\n",
-    "    print(i)\n",
-""
+    "    print(i)\n"
    ]
   },
   {
@@ -733,8 +724,8 @@
    "outputs": [],
    "source": [
     "def epfl_email(first_name, last_name):\n",
-    "    '''Email address generator, prints <first_name>.<last_name>@epfl.ch'''\n",
-    "    print(f'{first_name.lower()}.{last_name.lower()}@epfl.ch')\n",
+    "    '''Email address generator, prints <first_name>.<last_name>@ucl.ac.uk'''\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ac.uk')\n",
     "\n",
     "epfl_email('Tim', 'Hillel')"
    ]
@@ -769,8 +760,8 @@
    "outputs": [],
    "source": [
     "def epfl_email(first_name='first', last_name='last'):\n",
-    "    '''Email address generarator, prints <first_name>.<last_name>@epfl.ch'''\n",
-    "    print(f'{first_name.lower()}.{last_name.lower()}@epfl.ch')\n",
+    "    '''Email address generarator, prints <first_name>.<last_name>@ucl.ac.uk'''\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ac.uk')\n",
     "\n",
     "epfl_email()"
    ]
@@ -793,8 +784,7 @@
     "    '''Email address generator, prints <first_name>.<last_name>@<sld>.<tld>'''\n",
     "    print(f'{first_name.lower()}.{last_name.lower()}@{sld}.{tld}')\n",
     "\n",
-    "epfl_email('Tim', 'Hillel', tld='co.uk')\n",
-""
+    "epfl_email('Tim', 'Hillel', tld='co.uk')\n"
    ]
   },
   {
