--- a/Solutions/03_numpy_matplotlib_solution.ipynb
+++ b/Solutions/03_numpy_matplotlib_solution.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Numpy & matplotlib\n",
     "\n",
-    "This notebook was written by Tim Hillel (tim.hillel@epfl.ch) for the Decision-aid methodologies in transportation course at EPFL (http://edu.epfl.ch/coursebook/en/decision-aid-methodologies-in-transportation-CIVIL-557). \n",
+    "This notebook was written by Tim Hillel (tim.hillel@ucl.ac.uk) for the UCL Department of Civil, Environmental, and Geomatric Engineering (CEGE) Introduction to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -96,8 +96,7 @@
    "source": [
     "# create vector a1\n",
     "a1 = np.arange(20)\n",
-    "a1\n",
-""
+    "a1\n"
    ]
   },
   {
@@ -115,8 +114,7 @@
    "source": [
     "# reshape a1 to 4x5 and store the result in a2\n",
     "a2 = a1.reshape(4,5)\n",
-    "a2\n",
-""
+    "a2\n"
    ]
   },
   {
@@ -132,8 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a1.reshape(-1)\n",
-""
+    "a1.reshape(-1)\n"
    ]
   },
   {
@@ -152,8 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a2[2,1]\n",
-""
+    "a2[2,1]\n"
    ]
   },
   {
@@ -176,8 +172,7 @@
    "source": [
     "display(a2[1])\n",
     "display(a2[:,2])\n",
-    "display(a2[:-1,3:])\n",
-""
+    "display(a2[:-1,3:])\n"
    ]
   },
   {
@@ -213,8 +208,7 @@
    "source": [
     "a3 = a2/2\n",
     "display(a3)\n",
-    "a3.dtype\n",
-""
+    "a3.dtype\n"
    ]
   },
   {
@@ -232,8 +226,7 @@
    "source": [
     "display(a3.shape)\n",
     "display(a3.max())\n",
-    "display(a3.argmax())\n",
-""
+    "display(a3.argmax())\n"
    ]
   },
   {
@@ -272,8 +265,7 @@
     "np.random.seed(42)\n",
     "# create a4\n",
     "a4 = 4*(np.random.rand(4,5)-0.5)\n",
-    "a4\n",
-""
+    "a4\n"
    ]
   },
   {
@@ -296,8 +288,7 @@
     "display(a4_mean)\n",
     "display(a4.mean())\n",
     "display(a4_var)\n",
-    "display(a4.var())\n",
-""
+    "display(a4.var())\n"
    ]
   },
   {
@@ -317,8 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a4>1\n",
-""
+    "a4>1\n"
    ]
   },
   {
@@ -338,8 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a4[a4<-1]\n",
-""
+    "a4[a4<-1]\n"
    ]
   },
   {
@@ -375,8 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(a4)\n",
-""
+    "plt.plot(a4)\n"
    ]
   },
   {
@@ -392,8 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot((a3+a4).reshape(-1))\n",
-""
+    "plt.plot((a3+a4).reshape(-1))\n"
    ]
   },
   {
@@ -429,8 +416,7 @@
     "plt.xlabel('x')\n",
     "plt.ylabel('y')\n",
     "plt.legend()\n",
-    "plt.savefig('normal_scatter.jpg')\n",
-""
+    "plt.savefig('normal_scatter.jpg')\n"
    ]
   }
  ],
